# dojo

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_START.md  QUESTIONS.md  README.md  dojo.spec  install.sh  mise.toml  mkdocs.yml  pyproject.toml  run_dojo.py
.github/workflows/: docs.yml  release.yml
archived_implementation/tests/: helpers.py  test_api.py  test_campaign_setup.py  test_ingestion_cli.py  test_pdf_export_and_interleaving.py  test_schemas.py
docs/: INSIGHTS.md  OPEN-PROBLEMS.md  PROMPT_LAB.md  STATE.md  SUMMARY.md  ai-connector-interface.md  api-specification.md  cli-interface-design.md  demo-shots.md  development-approach.md  growth-blog-plan.md  growth-strategy.md  index.md  installation.md  llm-provider-interface.md  pedagogy-foundation.md  product-north-star.md  project-roadmap.md  sprint-ai-command-connector.md  terminal-ux-and-tech-stack.md
docs/adr/: 001-unified-source-representation.md  002-campaign-as-pedagogical-director.md  003-agent-delegated-scheduling.md  003-dynamic-jit-replenishment-over-upfront-generation.md  004-campaign-scoped-calibration.md  005-maintenance-and-execution-hybrid.md  006-centralized-schemas-and-pedagogical-pacing.md  007-multi-tiered-spaced-repetition-scheduling.md  008-sliding-window-history-in-reflection.md  009-value-injection-pseudo-skill-prompt-design.md  010-harness-first-task-fulfillment.md  011-store-protocol-and-markdown-contract.md  012-deterministic-pedagogy-core.md  013-frictionless-capture-and-routing.md  014-adopt-py-fsrs-for-retention-scheduling.md  015-anki-interop-import-export-not-sync.md  016-two-tier-prompt-eval-with-ratcheted-baselines.md  017-encoding-stage-and-practice-continuity.md  018-vault-grade-store-layout.md
docs/design/: anki-interop.md  blueprint.md  prompts.md  reflect-decomposition.md  skill-behavioral-evals.md  usecase-audit.md
docs/ramblings-planning-not-authoritative/: README.md  ai-connector-interface.md  blog-plan-prompt-lab-flywheel.md  cli-interface-design.md
evals/: judge_prompt.md
evals/baselines/: output-budget.json  (+6 more)
scripts/: gen_ref_pages.py
tests/: evals_lib.py  test_ai_connector_cli.py  test_amend.py  test_api.py  test_capture.py  test_command_connector_invocation.py  test_connector_test_dryrun.py  test_context_retrieval.py  test_daily.py  test_docs_coverage.py  test_dojo.py  test_e2e_loops.py  test_encoding.py  test_eval_traces.py  test_evals.py  test_evals_holdout.py  test_evals_quality.py  test_evals_skill.py  test_exercise_generate_contract.py  test_export.py  test_ingestion_storage.py  test_installer_cli.py  test_interactive.py  test_judge_hygiene.py  test_learn.py  test_logger.py  test_migrations.py  test_more.py  test_output_budget.py  test_ownership.py  test_packet.py  test_plan_authority.py  test_practice_session_cli.py  test_present.py  test_prompts.py  test_quality_corpus.py  test_retirement.py  test_review_queue_cli.py  test_scheduling.py  test_schemas.py  (+12 more)
(+501 files in other folders)
