[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dojo"
version = "0.1.0"
description = "Local-first source-to-practice app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.38",
    "rich>=15.0.0",
]

[project.scripts]
dojo = "dojo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
