[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dojo"
version = "0.1.0"
description = "Local-first source-to-practice app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "rich>=15.0.0",
    "pydantic>=2.5",
    "fsrs>=6,<7",
]

[project.optional-dependencies]
pdf = ["fpdf2>=2.7.0"]

[project.scripts]
dojo = "dojo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dojo.prompts" = ["*.md", "fragments/*.md"]
"dojo.evals" = ["judge_prompt.md", "corpus/*/*.yaml"]
"dojo.skills" = ["dojo/SKILL.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["eval: real-model prompt evals (ADR 016); needs DOJO_EVAL_FULFILLER"]
addopts = "-m 'not eval'"
