[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dojo"
version = "0.2.0"
description = "Local-first source-to-practice app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "rich>=15.0.0",
    "pydantic>=2.5",
    "fsrs>=6,<7",
]

[project.optional-dependencies]
pdf = ["fpdf2>=2.7.0"]
# Built with ProperDocs (the maintained MkDocs 1.x continuation; MkDocs
# itself was abandoned upstream in 2026). mkdocs-material still declares a
# dep on mkdocs<2, so both end up installed; the build uses `properdocs`.
docs = [
    "properdocs>=1.6.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[project.scripts]
dojo = "dojo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dojo.prompts" = ["*.md", "fragments/*.md"]
"dojo.evals" = ["judge_prompt.md", "corpus/*/*.yaml"]
"dojo.skills" = ["dojo/SKILL.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "eval: real-model prompt evals (ADR 016); needs DOJO_EVAL_FULFILLER",
    "eval_holdout: HOLDOUT prompt evals — run only at release gates, never during prompt iteration (anti-reward-hacking)",
    "eval_tokens: real-model output-byte ratchet (token-diet); needs DOJO_TOKEN_DRIVER + local ollama",
]
addopts = "-m 'not eval and not eval_holdout and not eval_tokens'"
